<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/Orange"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mist.jahidulislam.toptailors.AddAccountActivity"
    tools:showIn="@layout/activity_add_account">


    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/imageView"
        android:src="@mipmap/tailor_logo"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White"
        android:textStyle="italic"

        android:text="Top Tailors"
        android:id="@+id/textView8"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White"
        android:textStyle="italic"

        android:text="LET'S  GET  STARTED"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

                <AutoCompleteTextView
                    android:id="@+id/autoUserName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    style="?android:listSeparatorTextViewStyle"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:background="@drawable/register_circle"
                    android:textAlignment="center"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="0.97" />



                <AutoCompleteTextView
                    android:id="@+id/autoUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    style="?android:listSeparatorTextViewStyle"
                    android:background="@drawable/register_circle"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:textAlignment="center"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>



                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    style="?android:listSeparatorTextViewStyle"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:background="@drawable/register_circle"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:textAlignment="center"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/ConformPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    style="?android:listSeparatorTextViewStyle"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:background="@drawable/register_circle"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:textAlignment="center"
                    android:hint="Re-enter Password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            <Button
                android:id="@+id/user_register_in_button"
                style="?android:listSeparatorTextViewStyle"
                android:background="@drawable/button"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/White"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />



        </LinearLayout>
    </ScrollView>


</LinearLayout>
