<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/Orange"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mist.jahidulislam.toptailors.Login"
    tools:showIn="@layout/activity_login">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/imageView"
        android:src="@mipmap/tailor_logo"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White"
        android:textStyle="italic"
        android:text="Top Tailors"
        android:id="@+id/textView8"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:id="@+id/linearLayout5"
        android:weightSum="1">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center"
        android:ems="10"
        android:id="@+id/userEmail"
        style="?android:listSeparatorTextViewStyle"
        android:background="@drawable/register_circle"

        android:hint="@string/prompt_email"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_weight="0.70" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:background="@drawable/register_circle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/prompt_password"
        android:textAlignment="center"
        style="?android:listSeparatorTextViewStyle"
        android:ems="10"
        android:id="@+id/userPassword"
        android:layout_below="@+id/userEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_weight="0.63" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in_short"
        android:id="@+id/btSing_in"
        android:textColor="@color/White"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="@drawable/button"
        style="?android:listSeparatorTextViewStyle"
        android:layout_below="@+id/userPassword"
        android:layout_marginTop="62dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    </LinearLayout>
    </ScrollView>
</RelativeLayout>
